<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gymguide.HomeActivity">

    <TextView
        android:id="@+id/day_textview"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="8dp"
        android:text="17"
        android:textColor="@color/gray"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/month_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:text="MAY"
        android:textColor="@color/gray"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/year_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="58dp"
        android:text="2019"
        android:textColor="@color/gray"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/qrcode_button"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/qrimage" />

    <TextView
        android:id="@+id/scan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qrcode_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="268dp"
        android:layout_marginTop="165dp"
        android:text="Scan QR Code"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <View
        android:id="@+id/div"
        android:layout_below="@+id/scan_text"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/completed_workouts_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/div"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="Completed Workouts"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/completed_workouts_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/completed_workouts_textview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp" />
    <View
        android:id="@+id/div2"
        android:layout_below="@+id/completed_workouts_recyclerview"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/recommended_workouts_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/completed_workouts_recyclerview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="Recommended Workouts"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recommended_workouts_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recommended_workouts_textview"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="workoutName"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="120dp"
        android:text="Finish Workout" />

</RelativeLayout>